# learn-libav

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindLIBAV.cmake
includes/: helpers.h  log.h
src/: decode_encode.cpp  main.cpp  transcoding.cpp
